--- a/Data-Document/接口文档.md
+++ b/Data-Document/接口文档.md
@@ -9,11 +9,23 @@
 ## 登录
 
 > `post` admin.wse.com/admin/login
+> `get` admin.wse.com/view/login
 
 | **参数** | **类型** | **必需/可选** | **默认** | **描述** |
 | :-: | :-: | :-: | :-: | :- |
 |username|string|`必需`|无|用户名称|
 |password|string|`必需`|无|md5加密的用户密码|
+
+
+```javascript
+{
+    "status": 200,
+    "message": "注册成功",
+    "result": {
+        "token": '5436d48d48gda784g5d4'
+    } // 用户id
+}
+```
 
 
 
@@ -24,10 +36,20 @@
 ## 统计(欢迎界面)
 
 > `get` admin.wse.com/index/welcome
+> `get` admin.wse.com/view/login
 
 | **参数** | **类型** | **必需/可选** | **默认** | **描述** |
 | :-: | :-: | :-: | :-: | :- |
 |**token**|**string**|**`必需`**|**无**|**用户的token**|
+
+
+```javascript
+{
+    "code": 200,
+    "msg": "注册成功",
+    "data": 11 // 用户id
+}
+```
 
 
 
