--- a/Data-Document/接口文档.md
+++ b/Data-Document/接口文档.md
@@ -29,6 +29,34 @@
 
 
 
+## 保存
+
+> `post` admin.wse.com/admin/save
+> `get` admin.wse.com/view/admin_save
+
+| **参数** | **类型** | **必需/可选** | **默认** | **描述** |
+| :-: | :-: | :-: | :-: | :- |
+|**token**|**string**|**`必需`**|**无**|**用户的token**|
+|username|string|`必需`|无|用户名称|
+|real_name|string|可选|无|真实姓名|
+|phone|string|可选|无|手机|
+|wechat|string|可选|无|微信|
+|passwrod|string|`必需`|无|密码|
+|password_confirm|string|`必需`|无|确认密码|
+|status|int|`必需`|1|状态|
+
+
+```javascript
+{
+    "status": 200,
+    "message": "执行成功",
+    "result": "保存成功"
+}
+```
+
+
+
+
 # 主页
 
 
