--- a/Data-Document/接口文档.md
+++ b/Data-Document/接口文档.md
@@ -22,7 +22,7 @@
     "code": 200,
     "msg": "注册成功",
     "data": {
-        "token": '5436d48d48gda784g5d4'
+        "token": 'effbeff30725f83eded7fa0904a41afe2458e428'
     } // 用户id
 }
 ```
